[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripting/puppet.gd" type="Script" id=1]
[ext_resource path="res://scripting/puppet_name.gd" type="Script" id=2]
[ext_resource path="res://assets/models/hors.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/name_box.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=5]
radius = 2.0

[sub_resource type="QuadMesh" id=2]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("name_box")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = SubResource( 3 )

[node name="puppet" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.630614, 4.04652, 0 )
script = ExtResource( 1 )

[node name="player_collide" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0.0273843, 0 )
shape = SubResource( 5 )

[node name="name_box2" type="MeshInstance" parent="player_collide"]
transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.80656, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="player_model" parent="player_collide" instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.25, 0, 0, 0, 0.5, 0, -1.19541, 0 )

[node name="throw_point" type="Spatial" parent="player_collide"]

[node name="dep" type="Viewport" parent="."]
size = Vector2( 1024, 512 )
own_world = true
transparent_bg = true
hdr = false
disable_3d = true
render_target_v_flip = true
gui_disable_input = true

[node name="Control" type="Control" parent="dep"]
visible = false
margin_left = 237.935
margin_top = 200.612
margin_right = 237.935
margin_bottom = 200.612

[node name="puppet_name" type="Label" parent="dep/Control"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 14, 14 )
text = "Puppet"
align = 1
script = ExtResource( 2 )

[node name="name_box" parent="." instance=ExtResource( 4 )]
